--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@
 #APISERVER=https://api.bchjs.cash/v3/
 
 APISERVER=https://api.fullstack.cash/v3/
-AUTHSERVER=https://auth.fullstack.cash
+AUTHSERVER=https://jwt.bchtest.net
